[gd_scene load_steps=8 format=3 uid="uid://64d8byno8hck"]

[ext_resource type="Script" path="res://LevelSelect/Islands/LevelSelectIsland.gd" id="1_lf6hf"]
[ext_resource type="Texture2D" uid="uid://k01tcfpjl3pi" path="res://LevelSelect/Islands/Map1.png" id="2_3ndge"]
[ext_resource type="Texture2D" uid="uid://dekjib5l3hkip" path="res://LevelSelect/Islands/LevelSelectStar.png" id="3_it5ut"]

[sub_resource type="Animation" id="Animation_6wue8"]
resource_name = "float"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, -2, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf4fg"]
_data = {
"float": SubResource("Animation_6wue8")
}

[sub_resource type="Animation" id="Animation_dmqyp"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.109804, 0.109804, 0.109804, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7t0pk"]
_data = {
"reveal": SubResource("Animation_dmqyp")
}

[node name="Level1" type="MarginContainer"]
offset_right = 96.0
offset_bottom = 80.0
theme_override_constants/margin_top = 0
script = ExtResource("1_lf6hf")
level_name = "1"

[node name="Island" type="TextureButton" parent="."]
z_index = 1
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_3ndge")

[node name="Star1" type="TextureRect" parent="Island"]
texture_filter = 1
layout_mode = 0
offset_left = 18.0
offset_top = 51.0
offset_right = 38.0
offset_bottom = 71.0
texture = ExtResource("3_it5ut")

[node name="Star2" type="TextureRect" parent="Island"]
texture_filter = 1
layout_mode = 0
offset_left = 38.0
offset_top = 58.0
offset_right = 58.0
offset_bottom = 78.0
texture = ExtResource("3_it5ut")

[node name="Star3" type="TextureRect" parent="Island"]
texture_filter = 1
layout_mode = 0
offset_left = 58.0
offset_top = 51.0
offset_right = 78.0
offset_bottom = 71.0
texture = ExtResource("3_it5ut")

[node name="FloatAnimation" type="AnimationPlayer" parent="Island"]
libraries = {
"": SubResource("AnimationLibrary_bf4fg")
}

[node name="StartAnimationTimer" type="Timer" parent="Island/FloatAnimation"]
one_shot = true

[node name="ModulateAnimation" type="AnimationPlayer" parent="Island"]
libraries = {
"": SubResource("AnimationLibrary_7t0pk")
}

[connection signal="pressed" from="Island" to="." method="_on_island_pressed"]
[connection signal="timeout" from="Island/FloatAnimation/StartAnimationTimer" to="." method="_on_start_animation_timer_timeout"]
